--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@ void main(void) {
  gl_FragColor = vec4(color);
 }
 </script>
+
 <script type="text/javascript">
+var gdpmin = 300;
+var gdpmax = 135000;
+var lifemin = 20;
+var lifemax = 90;
 var data = [];
 var hovered = -1;
 function populateControls() {
