--- a/index.html
+++ b/index.html
@@ -257,19 +257,19 @@ function getScale(rx, ry, incx, incy, logx, logy){
                 var dx = 2.0*(i+Math.log10(j))/nx - 1;
                 gridlines.push(dx);
                 gridlines.push(-1.05);
-                gridlines.push(0);
+                gridlines.push(0.9);
                 gridlines.push(dx);
                 gridlines.push(1.05);
-                gridlines.push(0);
+                gridlines.push(0.9);
             }
         }
         else{
             gridlines.push(i*2.0/nx - 1);
             gridlines.push(-1.05);
-            gridlines.push(0);
+            gridlines.push(0.9);
             gridlines.push(i*2.0/nx - 1);
             gridlines.push(1.05);
-            gridlines.push(0);
+            gridlines.push(0.9);
         }
     }
     for(var i=0; i< ny; i++){
@@ -278,19 +278,19 @@ function getScale(rx, ry, incx, incy, logx, logy){
                 var dy = 2.0*(i+Math.log10(j))/ny - 1;
                 gridlines.push(1.05);
                 gridlines.push(dy);
-                gridlines.push(0);
+                gridlines.push(0.9);
                 gridlines.push(-1.05);
                 gridlines.push(dy);
-                gridlines.push(0);
+                gridlines.push(0.9);
             }
         }
         else{
             gridlines.push(1.05);
             gridlines.push(i*2.0/ny - 1);
-            gridlines.push(0);
+            gridlines.push(0.9);
             gridlines.push(-1.05);
             gridlines.push(i*2.0/ny - 1);
-            gridlines.push(0);
+            gridlines.push(0.9);
         }
     }
     return gridlines;
@@ -436,7 +436,7 @@ function drawTrend(idx, color){
         if(data[i].index == idx){
             out.push(data[i].coord[0]);
             out.push(data[i].coord[1]);
-            out.push(0);
+            out.push(0.2);
         }
     }
     var buff2 = gl.createBuffer();
@@ -569,7 +569,8 @@ function renderLoop() {
                 continue;
             }
             maxPopulation = Math.max(maxPopulation, population);
-            data.push({coord: getCoord(gdp, life_expectancy), population: population, color: colors[name], radius: 0, index: countries[i].index ? countries[i].index : i, gdp: gdp, life_expectancy: life_expectancy, year: p + 1800, name: name, trend: true});
+            var color = [colors[name][0], colors[name][1], colors[name][2], hovered != -1 ? transparency : 1];
+            data.push({coord: getCoord(gdp, life_expectancy), population: population, color: color, radius: 0, index: countries[i].index ? countries[i].index : i, gdp: gdp, life_expectancy: life_expectancy, year: p + 1800, name: name, trend: true});
         }
     }
     // Show rest of data transparently
@@ -589,23 +590,23 @@ function renderLoop() {
         var biggest = $("#circleSlider").slider("value");
         data[i].radius = Math.pow(data[i].population,0.3)/Math.pow(maxPopulation,0.3)*biggest;
 
-        var zindex = -0.1;
+        var zindex = 0.3;
         if (hovered == i) {
             data[i].color = [1,0,1,1];
-            zindex = -1;
+            zindex = 0;
         }
 
         if (data[i].trend) {
-            zindex = -1;
+            zindex = 0.1;
         }
 
         drawCircle(data[i].coord[0], data[i].coord[1], data[i].radius, data[i].color, zindex);
-        drawHighlight(data[i].coord[0], data[i].coord[1], data[i].radius + 0.001, [0, 0, 0, 1], -0.1);
+        drawHighlight(data[i].coord[0], data[i].coord[1], data[i].radius + 0.001, [0, 0, 0, 1], zindex);
     }
     if (hovered != -1) {
-        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.01, [1, 0, 1, 1], -1);
-        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.02, [1, 0, 1, 1], -1);
-        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.03, [1, 0, 1, 1], -1);
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.01, [1, 0, 1, 1], zindex);
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.02, [1, 0, 1, 1], zindex);
+        drawHighlight(data[hovered].coord[0], data[hovered].coord[1], data[hovered].radius + 0.03, [1, 0, 1, 1], zindex);
     }
     window.requestAnimationFrame(renderLoop);
 }
