--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -74,8 +74,19 @@
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/gl-matrix-min.js"></script>
 <script src="js/preloadjs-0.6.2.min.js"></script>
-
-
+<script id="vertexShader" type="x-shader/x-vertex">
+attribute vec3 coordinates;
+void main(void) {
+ gl_Position = vec4(coordinates, 1.0);
+}
+</script>
+<script id="fragmentShader" type="x-shader/x-fragment">
+precision highp float;
+uniform vec4 color;
+void main(void) {
+ gl_FragColor = vec4(color);
+}
+</script>
 <script>
     $("#fovSpinner").spinner({
         min: 10.0,
@@ -192,6 +203,45 @@
     });
 
     // TODO: Your code here.
+    var canvas = document.getElementById("webglCanvas")
+    var gl = canvas.getContext("experimental-webgl");
+    if (!gl) {
+        gl = canvas.getContent("webgl");
+        if (!gl) {
+            alert("Cannot get WebGL context!");
+        }
+    }
+    var vertex_buffer = gl.createBuffer();
+
+    /*=================== Shaders ====================*/
+    // Vertex shader source code
+    var vertCode = $("#vertexShader").html();
+    // Create a vertex shader object
+    var vertShader = gl.createShader(gl.VERTEX_SHADER);
+    // Attach vertex shader source code
+    gl.shaderSource(vertShader, vertCode);
+    // Compile the vertex shader
+    gl.compileShader(vertShader);
+    // Fragment shader source code
+    var fragCode = $("#fragmentShader").html();
+    // Create fragment shader object
+    var fragShader = gl.createShader(gl.FRAGMENT_SHADER);
+    // Attach fragment shader source code
+    gl.shaderSource(fragShader, fragCode);
+    // Compile the fragmentt shader
+    gl.compileShader(fragShader);
+    // Create a shader program object to store
+    // the combined shader program
+    var shaderProgram = gl.createProgram();
+    // Attach a vertex shader
+    gl.attachShader(shaderProgram, vertShader);
+    // Attach a fragment shader
+    gl.attachShader(shaderProgram, fragShader);
+    // Link both the programs
+    gl.linkProgram(shaderProgram);
+    // Use the combined shader program object
+    var compilationLog = gl.getShaderInfoLog(vertShader) + gl.getShaderInfoLog(fragShader);
+    console.log('Shader compiler log: ' + compilationLog);
 </script>
 
 </body>
