--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -65,7 +65,7 @@
 
     <ul>
         <li>Please list your team members with NetID in this unordered list.</li>
-        <li>Example: Steve Marschner (srm2)</li>
+        <li>Example: Alex Schneider (aas339), Josh Beinhacker (jpb345), Spencer Weiss (sbw66), Aishwarya Singh (as2539)</li>
     </ul>
 </div>
 
