--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -217,7 +217,7 @@ void main(void) {
     	}
     	else if (e.keyCode == '39') {
        		// right arrow
-       		startHeading = startHeading + Math.PI/2;
+       		startHeading = startHeading - Math.PI/2;
     	}
     });
 
