--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -205,11 +205,33 @@ void main(void) {
 
     	if (e.keyCode == '38') {
         	// up arrow
-        	startPosition = [x + 1, y];
+        	if(c == "N"){
+				startPosition = [x, y + 1];
+        	}
+        	if(c == "S"){
+        		startPosition = [x, y - 1];
+        	}
+        	if(c == "E"){
+        		startPosition = [x + 1, y];
+        	}
+        	if(c == "W"){
+        		startPosition = [x - 1, y];
+        	}
     	}
     	else if (e.keyCode == '40') {
         	// down arrow
-        	startPosition = [x - 1, y];
+        	if(c == "N"){
+				startPosition = [x, y - 1];
+        	}
+        	if(c == "S"){
+        		startPosition = [x, y + 1];
+        	}
+        	if(c == "E"){
+        		startPosition = [x - 1, y];
+        	}
+        	if(c == "W"){
+        		startPosition = [x + 1, y];
+        	}
     	}
    		else if (e.keyCode == '37') {
        		// left arrow
