--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -200,46 +200,45 @@ void main(void) {
 
     $("#webglCanvas").keydown(function (event) {
         // TODO: Edit this so that the crawler responds to the arrow keys.
-        document.onkeydown = checkKey;
-        e = e || window.event;
+        var e = e || window.event;
 
     	if (e.keyCode == '38') {
         	// up arrow
-        	if(c == "N"){
+        	if(createMazeFromStrings(strings).c == "N"){
 				startPosition = [x, y + 1];
         	}
-        	if(c == "S"){
+        	if(createMazeFromStrings(strings).c == "S"){
         		startPosition = [x, y - 1];
         	}
-        	if(c == "E"){
+        	if(createMazeFromStrings(strings).c == "E"){
         		startPosition = [x + 1, y];
         	}
-        	if(c == "W"){
+        	if(createMazeFromStrings(strings).c == "W"){
         		startPosition = [x - 1, y];
         	}
     	}
     	else if (e.keyCode == '40') {
         	// down arrow
-        	if(c == "N"){
+        	if(createMazeFromStrings(strings).c == "N"){
 				startPosition = [x, y - 1];
         	}
-        	if(c == "S"){
+        	if(createMazeFromStrings(strings).c == "S"){
         		startPosition = [x, y + 1];
         	}
-        	if(c == "E"){
+        	if(createMazeFromStrings(strings).c == "E"){
         		startPosition = [x - 1, y];
         	}
-        	if(c == "W"){
+        	if(createMazeFromStrings(strings).c == "W"){
         		startPosition = [x + 1, y];
         	}
     	}
    		else if (e.keyCode == '37') {
        		// left arrow
-       		startHeading = startHeading + Math.PI/2;
+       		createMazeFromStrings(strings).startHeading = createMazeFromStrings(strings).startHeading + Math.PI/2;
     	}
     	else if (e.keyCode == '39') {
        		// right arrow
-       		startHeading = startHeading - Math.PI/2;
+       		       		createMazeFromStrings(strings).startHeading = createMazeFromStrings(strings).startHeading - Math.PI/2;
     	}
     });
 
