--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -231,32 +231,38 @@ void main(void) {
 
         if (e.keyCode == '38') {
             // up arrow
+            if (maze.data[maze.startPosition[0]][maze.startPosition[1] + zOffset + 1] != 1) {
+                zOffset += 1;
+            }
             if(getMazeStrings().c == "N"){
-                startPosition = [x, y + 1];
+                maze.startPosition = [x, y + 1];
             }
             if(getMazeStrings().c == "S"){
-                startPosition = [x, y - 1];
+                maze.startPosition = [x, y - 1];
             }
             if(getMazeStrings().c == "E"){
-                startPosition = [x + 1, y];
+                maze.startPosition = [x + 1, y];
             }
             if(getMazeStrings().c == "W"){
-                startPosition = [x - 1, y];
+                maze.startPosition = [x - 1, y];
             }
         }
         else if (e.keyCode == '40') {
             // down arrow
+            if (maze.data[maze.startPosition[0]][maze.startPosition[1] + zOffset - 1] != 1) {
+                zOffset -= 1;
+            }
             if(getMazeStrings().c == "N"){
-                startPosition = [x, y - 1];
+                maze.startPosition = [x, y - 1];
             }
             if(getMazeStrings().c == "S"){
-                startPosition = [x, y + 1];
+                maze.startPosition = [x, y + 1];
             }
             if(getMazeStrings().c == "E"){
-                startPosition = [x - 1, y];
+                maze.startPosition = [x - 1, y];
             }
             if(getMazeStrings().c == "W"){
-                startPosition = [x + 1, y];
+                maze.startPosition = [x + 1, y];
             }
         }
         else if (e.keyCode == '37') {
@@ -267,6 +273,7 @@ void main(void) {
             // right arrow
             getMazeStrings().startHeading = getMazeStrings().startHeading - Math.PI/2;
         }
+        e.preventDefault();
     });
     
     
@@ -417,6 +424,7 @@ void main(void) {
 
     /*================= Drawing ===========================*/
     var time_old = 0;
+    var zOffset = 0;
 
 
 
@@ -425,15 +433,21 @@ void main(void) {
     var proj_matrix = get_projection(getFov(), canvas.width/canvas.height, 0.1, 100);
     var mov_matrix = [1,0,0,0, 0,1,0,0, 0,0,1,0, 0,0,0,1];
     // Compute view matrix based on start position
-    var view_matrix = [1,0,0,0, 0,1,0,0, 0,0,1,0, -maze.startPosition[0], -getEyeHeight(), maze.startPosition[1],1];
-;
+    // var view_matrix = [1,0,0,0, 0,1,0,0, 0,0,1,0, -maze.startPosition[0], -getEyeHeight(), maze.startPosition[1],1];
+    var view_matrix = [1,0,0,0, 0,1,0,0, 0,0,1,0, 0, 0, 0,1];
+    rotateY(view_matrix, maze.startHeading);
+    mat4.invert(view_matrix, view_matrix);
+    view_matrix[12] = -maze.startPosition[0];
+    view_matrix[13] = -getEyeHeight();
+    view_matrix[14] = maze.startPosition[1] + zOffset;
+
 
     var dt = time-time_old;
     time_old = time;
 
     gl.enable(gl.DEPTH_TEST);
     //gl.depthFunc(gl.LEQUAL);
-    gl.clearColor(0.5, 0.5, 0.5, 0.9);
+    gl.clearColor(0.3, 0.7, 1.0, 0.9);
     gl.clearDepth(1.0);
 
     gl.viewport(0.0, 0.0, canvas.width, canvas.height);
