--- a/ppa03_student/index.html
+++ b/ppa03_student/index.html
@@ -287,11 +287,11 @@ void main(void) {
         }
         else if (e.keyCode == '37') {
             // left arrow
-            getMazeStrings().startHeading = getMazeStrings().startHeading + Math.PI/2;
+            maze.startHeading += Math.PI/2;
         }
         else if (e.keyCode == '39') {
             // right arrow
-            getMazeStrings().startHeading = getMazeStrings().startHeading - Math.PI/2;
+            maze.startHeading -= Math.PI/2;
         }
         e.preventDefault();
     });
